# codeexamples

cpp/virtual_destructors/: main.cpp
docker/qt48build/: Dockerfile  build-poppler.sh  freetype.diff  main.cpp  main.pro
linux/: README.md
linux/debbuild/: README.md
linux/debbuild/mylib-1.0/: Makefile.am  Makefile.in  README.md  configure  configure.ac  mylib.pc.in
linux/debbuild/mylib-1.0/debian/: README  README.source  changelog  control  debhelper-build-stamp  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  mylib.cron.d.ex  mylib.default.ex  mylib.doc-base.EX  mylib.substvars  postinst.ex  postrm.ex  preinst.ex  prerm.ex
linux/debbuild/mylib-1.0/debian/mylib/DEBIAN/: control  md5sums  shlibs
linux/debbuild/mylib-1.0/debian/mylib/usr/lib/x86_64-linux-gnu/: libmylib.la  libmylib.so.0.0.0
linux/debbuild/mylib-1.0/debian/mylib/usr/lib/x86_64-linux-gnu/pkgconfig/: mylib.pc
linux/debbuild/mylib-1.0/debian/mylib/usr/share/doc/mylib/: README.Debian  copyright
maven/: README.md
maven/im4java/: pom.xml
maven/my-antlr-app/: pom.xml
maven/my-app/: pom.xml
maven/my-itext-app/: README.md  pom.xml
maven/my-xmlunit-app/: pom.xml
maven/myjniapp/: README.md  pom.xml
qtquick/AppWindowSignals/: main.qml
qtquick/FocusScopes/: main.qml
qtquick/LocalStorage/: main.qml
qtquick/ModelDelegate/: CategoryModelGroup.qml  DataModel.qml  ElasticCategorySelector.qml  ElasticSelector.js  SendObjectToElasticSearch.js  main.qml  qml.qrc
qtquick/TestQmlModule/: RedRectangle.qml  myitem.cpp  myitem.h  testqmlmodule.pro  (+2 more)
(+94 files in other folders)
